Fixed the stream chat being too short in firefox. Commented away the gradient styles for IE for now since they're not working right

--- a/client/css/display.styl
+++ b/client/css/display.styl
@@ -120,7 +120,6 @@
 				
 				&:active
 					box-shadow inset 0px 5px 5px rgba(0, 0, 0, 0.25)
-					
 
 	> .jtv_wrapper
 		position absolute
@@ -174,6 +173,9 @@
 				&:active
 					box-shadow inset 0px 5px 5px rgba(0, 0, 0, 0.25)
 			
-			> .wrapper > iframe
-				width 100%
-				height 100%
+			> .wrapper
+				abspos(35px, 0px, 0px, 0px)
+
+				> iframe
+					width chatbox_size
+					height 100%
