--- a/client/css/sidebar.styl
+++ b/client/css/sidebar.styl
@@ -117,9 +117,10 @@
 
 				> .container
 					position relative
-					top 0
+					width sidebar_size
+					float left
 		
-			> .dragger_container
+			.dragger_container
 				position absolute
 				top 5px
 				right 5px
